2012-03-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Fix bumpsize.

2012-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/fileheader.c: header type for non-amanda header is
	  F_WEIRD.
	* server-src/amcheck-device.pl,
	  server-src/amtape.pl: Improve output for non-Amanda volume.

2012-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Chunker/Scribe.pm: do not call _start_chunk if the
	  transfer is finished.
	* server-src/driver.c: Fix hang.

2012-03-19  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Use "TAR-BLOCKSIZE" on restore.

2012-03-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Use statefile to find end_wal on
	  estimate.

2012-03-15  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Add IGNORE-ZEROS property.
	* man/xml-source/amgtar.8.xml: Document IGNORE-ZEROS property.

2012-03-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: touch $@

2012-03-13  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Do not Execute pg_start_backup for
	  estimate.

2012-03-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/glib-util.c: g_thread_supported always return TRUE on
	  newer version.

2012-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/glib-util.c, common-src/glib-util.h: Remove
	  g_queue_free_full.

2012-03-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am, common-src/am_sl.c: typo.

2012-03-09  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c, client-src/selfcheck.c,
	  client-src/sendbackup-dump.c, client-src/sendbackup-gnutar.c,
	  client-src/sendbackup.c, client-src/sendsize.c,
	  common-src/amxml.c, common-src/amxml.h,
	  recover-src/extract_list.c: s/level_t/am_level_t/g
	* client-src/calcsize.c, common-src/amxml.h,
	  common-src/conffile.c, common-src/conffile.h,